Fix truncation issue on body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,6 @@ body {
 	color:#484848;
 	font-family: 'ecom', Arial, Helvetica, sans-serif;
     min-height:100%;
-    height:100%;
 	text-transform: uppercase;
     max-width: 1200px;
     background: #fff;
